syntax = "proto3";

option csharp_namespace = "GrpcMain.Common"; 
 
message CommonResponse{
	bool Success=1;
	optional string Message=2;
}
 