syntax = "proto3";

option csharp_namespace = "GrpcMain.Device.AutoControl";
import "google/protobuf/empty.proto";
import "Common/CommonResponse.proto";
service DeviceAutoControlService {
    //设置设备自动控制
    rpc SetDeviceSetting(Request_SetDeviceSetting)
        returns(CommonResponse);
    //获取设备自动控制
    rpc GetDeviceSetting(Request_GetDeviceSetting)
       returns(DeviceAutoControlSetting);
}


message DeviceAutoControlSetting{
    int64 Open=1;
    //TODO
}
message Request_SetDeviceSetting{
    repeated int64 Dvids=1;
    optional DeviceAutoControlSetting Setting=2;
}   

message Request_GetDeviceSetting{
    int64 Dvids=1;
}

message Response_GetDeviceSetting{
    int64 Dvids=1;
    optional DeviceAutoControlSetting Setting=2;
}