syntax = "proto3";

option csharp_namespace = "GrpcMain.System";

import "google/protobuf/empty.proto";
import "Common/CommonResponse.proto";
service SystemService { 

    //获取系统基础信息
    rpc GetSystemBaseInfo( Request_GetSystemBaseInfo)
        returns (Response_GetSystemBaseInfo);
    //获取系统统计数据
    rpc GetStatics(Request_GetStatics)
        returns (Response_GetStatics);
}


message UserStatics{
    int32 SubUserCount=1;
    int32 TotalDevice=2;
    int32 TotalDeviceType=3;
    int32 TotalDataPoint=4;
    //MB
    int32 TotalColdData=5;

}
message Request_GetStatics{

}
message Response_GetStatics{
    repeated UserStatics Data=1;
}


message Request_GetSystemBaseInfo{
    //备用
    int64 SeverId=1;
}
message Response_GetSystemBaseInfo{
    int64 SeverId=1;

    string MachineName=2;
    string OsVersionName=3;
    string UserName=4;
    //系统运行毫秒
    int64 SystemTime=5;
    //页大小 byte
    int32 PageSize=6;
    //cup逻辑核心
    int32 ProcesserCount=7;
    bool Is64System=8;
    bool Is64Process=9;
    //MB
    int64 PhisicalMemory=10;


}